# geolift-simulation-study

./: .gitignore  CLAUDE.md  Makefile  README.md  SETUP.md  VERSIONS.md  geo_model_selection.MD  package-lock.json  pyproject.toml  requirements.txt
analysis/: audit_metrics.py  compute_metrics.py  eval_against_golden.py  generate_tables.py  plot_ci_gallery.py  plot_forest.py  smoke_test.py
config/: tools.yaml
environment/: Makevars.local  install_packages.R
notebooks/: dgp_walkthrough.ipynb  geo_walkthrough.ipynb  tool_comparison_walkthrough.ipynb  walkthrough_panels_master.csv
results/aggregated/: metrics.csv  table_A1.csv  table_A1.md  table_A2.csv  table_A2.md  table_A3.csv  table_A3.md  table_A4.csv  table_A4.md
src/R/: generate_panels.R  run_causalimpact.R  run_geolift.R
src/python/: compute_att.py  data_converters.py  panel_dgp.py  run_causalpy.py  run_google_mm.py  run_tools.py
tests/: test_compute_att.py  test_data_converters.py  test_panel_dgp.py
