[project]
name = "geo-simulation-v2"
version = "0.1.0"
description = "Monte Carlo simulation comparing geo-experiment tools"
requires-python = ">=3.10"
dependencies = [
    "causalpy==0.8.0",
    "pymc>=5.10",
    "arviz>=0.15",
    "matched-markets @ git+https://github.com/google/matched_markets.git",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tabulate>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
